# hal_bluenrg

bluenrg_family/: CMakeLists.txt
bluenrg_family/bluenrglp/: CMakeLists.txt
bluenrg_family/bluenrglp/drivers/: CMakeLists.txt
bluenrg_family/bluenrglp/drivers/include/: bluenrg_lpx.h  rf_driver_hal_conf.h  rf_driver_hal_uart.h  rf_driver_ll_gpio.h  rf_driver_ll_pwr.h  rf_driver_ll_rcc.h  rf_driver_ll_usart.h  rf_driver_ll_utils.h
bluenrg_family/bluenrglp/drivers/src/: rf_driver_ll_gpio.c  rf_driver_ll_usart.c
bluenrg_family/bluenrglp/soc/: startup_BlueNRG_LP.c
bluenrg_family/bluenrglp/soc/include/: clock.h  system_BlueNRG_LP.h
bluenrg_family/bluenrglp/soc/src/: clock.c  context_switch.s  miscutil.c  radio_ota.c  startup_BlueNRG_LP.c  system_BlueNRG_LP.c
dts/st/bluenrg/: steval_idb011v2-pinctrl.dtsi
dts/st/bluenrglp/: bluenrg_lp.dtsi  bluenrglp.dtsi
